# hands-on-personalized-recommender

./: .env.example  .gitignore  INSTALL_AND_USAGE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/: setup.yaml
.github/actions/setup/: action.yaml
.github/workflows/: feature_pipeline.yaml  ml_pipelines.yaml
notebooks/: 1_feature_engineering.ipynb  1_fp_computing_features.ipynb  2_tp_training_retrieval_model.ipynb  2_train_retrieval_model.ipynb  3_embeddings_creation.ipynb  3_tp_training_ranking_model.ipynb  4_fp_computing_item_embeddings.ipynb  4_ip_computing_item_embeddings.ipynb  4_train_ranking_model.ipynb  5_create_deployments.ipynb  5_ip_creating_deployments.ipynb  6_job_scheduler.ipynb  6_scheduling_materialization_jobs.ipynb  7_job_scheduler.ipynb  querymodel_transformer.py  ranking_predictor.py  ranking_transformer.py
recsys/: config.py  settings.py  utils.py
recsys/data/: ranking.py  retrieval.py
recsys/features/: articles.py  customers.py  embeddings.py  interaction.py  ranking.py  transactions.py
recsys/hopsworks_integration/: constants.py  feature_store.py
recsys/inference/: query_transformer.py  ranking_transformer.py
recsys/models/: ranking.py  ranking_serving.py  two_tower.py  two_tower_serving.py
recsys/raw_data_sources/: h_and_m.py
recsys/ui/: recommenders.py  utils.py
tools/: 6_inference_and_ui.py  clean_hopsworks_resources.py  inference_and_ui.py
