[project]
name = "hands-on-recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "catboost==1.2",
    "hopsworks>=3.7.0",
    "huggingface-hub==0.24.7",
    "langchain-openai==0.1.14",
    "langchain==0.2.6",
    "polars==1.9.0",
    "sentence-transformers==2.2.2",
    "streamlit==1.28.2",
    "tensorflow-recommenders==0.7.2",
    "tensorflow==2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]
